Fix activity feed alignment on larghe screens

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -80,7 +80,7 @@ button {
 #activity-header {
     display: flex;
     justify-content: space-evenly;
-    align-items: center;
+    flex-direction: column;
     padding: 10px 0 10px 0;
 }
 
